--- a/style.css
+++ b/style.css
@@ -1,97 +1,100 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 * {
     box-sizing: border-box;
-    margin : 0;
+    margin: 0;
     padding: 0;
-    font-family: 'Poppins' ;
+    font-family: 'Poppins';
 }
 
 body {
-    border-color: #222;
-} 
+    background-color: #222;
+}
 
-#card{
+#card {
     width: 90%;
-    max-width: 470px; 
+    max-width: 470px;
     background-repeat: no-repeat;
-    background-size: cover ;
-    background-image: url('gif/clear.gif');
+    background-size: cover;
+    background-image: url('gifs/clear.gif');
     color: #fff;
     margin: 100px auto 0;
     border-radius: 20px;
+    padding: 40px 35px;
     text-align: center;
+}
 
-}
-#search{
-    width : 100%;
-    display : flex;
+#search {
+    width: 100%;
+    display: flex;
     align-items: center;
-    justify-content : space-between;
+    justify-content: space-between;
 }
-#search input{
+#searchBox {
     border: 0;
     outline: 0;
-    background: #d5fff9;
+    background: #ebfffc;
     color: #555;
+    padding: 10px 25px;
     height: 60px;
+    width:100%;
+    border-radius: 30px;
     flex: 1;
     margin-right: 16px;
-    border-radius: 30px;
-    padding: 10px 25px;
     font-size: 18px;
 }
-#search button{
+#searchBtn {
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    border-radius: 50%;
     width: 60px;
     height: 60px;
-    border-radius: 50%;
-    border: 0;
-    outline : 0px;
-    background: #d5fff9;
     cursor: pointer;
-
 }
-#search button img{
+#searchBtn img {
     width: 16px;
 }
-#weather-icon{
+
+#weather-icon {
     width: 170px;
     margin-top: 30px;
 }
-#weather h2{
+#weather h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
 }
-#details{
+
+#details {
     display: flex;
-    padding: 0 20px;
     align-items: center;
     justify-content: space-between;
-    margin: 30px 0;
+    padding: 0 20px;
+    margin-top: 50px;
 }
-.col{
+.col {
     display: flex;
     align-items: center;
     text-align: left;
 }
-#col img{
+#col img {
     width: 40px;
     margin-right: 10px;
 }
-
+#humidity,
 #wind {
     font-size: 28px;
     margin-top: -6px;
-
 }
+
 #weather {
-    display: none ;
-
+    display: none;
 }
 
-#error{
+#error {
     text-align: left;
     margin-left: 10px;
     font-size: 14px;
     margin-top: 10px;
     display: none;
-} 
+}
